[package]
name = "basalt-plugin-semantic-facts-swift"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
basalt-plugin-sdk = { path = "../basalt-plugin-sdk" }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Build for wasm32-unknown-unknown (no WASI) by default.
# The Basalt host does not provide WASI imports for regular plugins.
[build]
target = "wasm32-unknown-unknown"
